--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="<%= BASE_URL %>dll/vue.dll.js" ></script>
+    <script src="<%= BASE_URL %>dll/sentry.dll.js" ></script>
   </body>
 </html>
